improve postman collection and docs, add installGitHooks, fix small problems
